; ModuleID = '/home/carl/AnghaBench/tmux/extr_session.c_session_find_by_id_str.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_session.c_session_find_by_id_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.session = type { i32 }

@UINT_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.session* @session_find_by_id_str(i8* %0) #0 {
  %2 = alloca %struct.session*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i8, i8* %6, align 1
  %8 = sext i8 %7 to i32
  %9 = icmp ne i32 %8, 36
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store %struct.session* null, %struct.session** %2, align 8
  br label %22

11:                                               ; preds = %1
  %12 = load i8*, i8** %3, align 8
  %13 = getelementptr inbounds i8, i8* %12, i64 1
  %14 = load i32, i32* @UINT_MAX, align 4
  %15 = call i32 @strtonum(i8* %13, i32 0, i32 %14, i8** %4)
  store i32 %15, i32* %5, align 4
  %16 = load i8*, i8** %4, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %18, label %19

18:                                               ; preds = %11
  store %struct.session* null, %struct.session** %2, align 8
  br label %22

19:                                               ; preds = %11
  %20 = load i32, i32* %5, align 4
  %21 = call %struct.session* @session_find_by_id(i32 %20)
  store %struct.session* %21, %struct.session** %2, align 8
  br label %22

22:                                               ; preds = %19, %18, %10
  %23 = load %struct.session*, %struct.session** %2, align 8
  ret %struct.session* %23
}

declare dso_local i32 @strtonum(i8*, i32, i32, i8**) #1

declare dso_local %struct.session* @session_find_by_id(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
